--- a/history.txt
+++ b/history.txt
@@ -2,4 +2,4 @@ Esta es la historia de Cristia Mojica
 
 uno de los desarrolladores mas cotizados de latinoamerica
 
-Vamos hablar de eso
+Vamos hablar de eso y durooooo.
