--- a/history.txt
+++ b/history.txt
@@ -3,3 +3,5 @@ Esta es la historia de Cristia Mojica
 uno de los desarrolladores mas cotizados de latinoamerica
 
 Vamos hablar de eso y durooooo y aspero.
+
+Bueno y otra cosa que no les habia dicho es que el man es triatleta.
